fixed layout overflow

--- a/resources/scss/commons/_app-header.scss
+++ b/resources/scss/commons/_app-header.scss
@@ -5,6 +5,4 @@
 
 .app-header {
     height: $header-height;
-
-    z-index: 1;
 }
