--- a/resources/scss/commons/_app-wrapper.scss
+++ b/resources/scss/commons/_app-wrapper.scss
@@ -7,5 +7,4 @@
     height: calc(100vh - $header-height);
 
     display: flex;
-    overflow-y: auto;
 }
